# libpysight-old

./: .gitignore  Cargo.toml  README.md  parse_lst.py
benches/: seq_vs_par.rs
src/: binary_parsing.rs  from_playground.rs  helper_funcs.rs  lib.rs  main.rs  parsing.rs  reading.rs
src/pre_reading/: mod.rs
src/reading/: mod.rs
