[package]
name = "rread_lst"
version = "0.1.0"
authors = ["Hagai Har-Gil <hagaihargil@protonmail.com>"]

[dependencies]
bitreader = "0.3"
filebuffer = "0.3"
libc = "0.2"
failure = "0.1"
failure_derive = "*"
data-encoding = "2.1"
rayon = "1.0.2"
byteorder = "1.2.6"

[lib]
name = "rread_lst"
# crate-type = ["cdylib"]